added admin user management page.

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -8,7 +8,7 @@
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
 
-    <title>Mira - React Material Admin Dashboard</title>
+    <title>Hermes Updater Admin Dashboard</title>
     <meta name="description" content="A professional package that comes with plenty of UI components, forms, tables, charts, dashboards, pages and svg icons. Each one is fully customizable, responsive and easy to use." />
     <meta name="keywords" content="mira,mui,material app,react,material,kit,dashboard,application,admin,template" />
     <meta name="author" content="Bootlab" />
